feat: working in the consumer of frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,5 +85,8 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "reconnecting-websocket": "^4.4.0"
   }
 }
