feat: advance in frontend and backend, making all functional

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -73,6 +73,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "lib/**/*.ts", "lib/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "lib/**/*.ts", "lib/**/*.tsx", "src/globalCss/index.ts"],
   "exclude": ["lib/**/*.stories.*"]
 }
