--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "storybook": "storybook dev -p 6006",
-    "storybook build": "storybook build",
+    "build-storybook": "storybook build",
     "test": "vitest run",
     "test:watch": "vitest",
     "build:lib": "tsc && vite build",
@@ -43,13 +43,13 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.8.0",
-    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-actions": "^8.6.12",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
     "@storybook/builder-vite": "^8.6.12",
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20.11.24",
@@ -87,6 +87,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "reconnecting-websocket": "^4.4.0"
+    "reconnecting-websocket": "^4.4.0",
+    "zustand": "^5.0.3"
   }
 }
